# superinstance-hdc-core

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: fingerprint.rs  judge.rs
examples/: flux_c_bridge.rs  plato_tile_matching.rs  quickstart.rs  wasm-demo.html  wasm.rs
python/: Cargo.toml
python/examples/: quickstart.py
python/src/: lib.rs
src/: auto.rs  bloom.rs  fingerprint.rs  hdc.rs  judge.rs  lib.rs  simd.rs  simd_avx512.rs  sram.rs
