[package]
name = "superinstance-hdc-core"
version = "0.2.1"
edition = "2021"
description = "Hyperdimensional Computing Core for bit-level agent cognition"
license = "MIT"
repository = "https://github.com/SuperInstance/superinstance-hdc-core"
keywords = ["hdc", "hyperdimensional", "memory", "sram", "fingerprint"]
categories = ["algorithms", "embedded", "no-std"]

[features]
default = ["std", "serde"]
std = ["memmap2", "thiserror", "serde/std"]
wasm = ["serde", "getrandom/js"]
no-std = []

[dependencies]
murmurhash = "0.1"
memmap2 = { version = "0.9", optional = true }
thiserror = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
structopt = { version = "0.3", optional = true }
termcolor = { version = "1.2", optional = true }
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[example]]
name = "quickstart"
path = "examples/quickstart.rs"
required-features = ["std"]

[[example]]
name = "flux_c_bridge"
path = "examples/flux_c_bridge.rs"
required-features = ["std"]

[[example]]
name = "wasm"
path = "examples/wasm.rs"
required-features = ["wasm"]

[[bin]]
name = "bake"
path = "src/bin/bake.rs"
required-features = ["std"]

[[bin]]
name = "judge"
path = "src/bin/judge.rs"
required-features = ["std"]

[[bin]]
name = "monitor"
path = "src/bin/monitor.rs"
required-features = ["std"]

[profile.release]
opt-level = 3
lto = true

[profile.wasm]
inherits = "release"
opt-level = "z"      # Optimize for size
lto = true
