[package]
name = "superinstance-hdc-py"
version = "0.1.0"
edition = "2021"
description = "Python bindings for SuperInstance HDC Core"
license = "MIT"
repository = "https://github.com/SuperInstance/superinstance-hdc-core"

[lib]
name = "superinstance_hdc_py"
crate-type = ["cdylib"]

[dependencies]
superinstance-hdc-core = { path = ".." }
pyo3 = { version = "0.21", features = ["extension-module"] }

[features]
default = ["pyo3/extension-module"]
